--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Odion Irenen Portfolio</h1>
-    <h2>I'm a Web Developer and this is <a href="file:///C:/Users/Odion%20Irenen/Documents/Web%20development/index.html">Personal Shopping Site</a></h2>
+    <h2>I'm a Web Developer and this is my <a href="./index.html.html">Personal Shopping Site</a></h2>
     <hr>
     <h2><a href="./public/birthday.html">Birthday Invite Project</a></h2><br>
     <img src="./assets/images/bi.png" alt="">
@@ -17,16 +17,13 @@
 </body>
 </html>
 
-
-
-
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
 <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
 
 <!-- TODO 4: Add titles/subtitles etc. -->
 
-<!-- TODO 5: Add a link to the project pages -->
+<!-- TODO 5: Add a link to the project pages --
 
 <!-- TODO 6: Add images to show the project previews
 HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
