--- a/birthday.html
+++ b/birthday.html
@@ -16,6 +16,7 @@
             <li>Cake</li>
         </ul>
             <h3>This is where you need to go:</h3>
-            <a href="https://www.peninsula.com/en/chicago/special-offers/rooms/luxury-in-advance?gad_source=1&gclid=Cj0KCQiAoKeuBhCoARIsAB4Wxtd3yw49LAdSYZsoX-YQJSHdQfSiZiX_Rj0s04lbUrKriVmliAaZtDoaAk_iEALw_wcB&gclsrc=aw.ds">5 Star Hotel</a>
+            <a href="https://www.peninsula.com/en/chicago/special-offers/rooms/luxury-in-advance?gad_source=1&gclid=Cj0KCQiAoKeuBhCoARIsAB4Wxtd3yw49LAdSYZsoX-YQJSHdQfSiZiX_Rj0s04lbUrKriVmliAaZtDoaAk_iEALw_wcB&gclsrc=aw.ds">5 Star Hotel</a> 
+            <h3>FYI:If you are giving Money please contact me directly, my contact info is at the first page</h3>
     </body>
 </html>
