--- a/index.html
+++ b/index.html
@@ -4,19 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <title>My project</title>
-</head>
-<body>
+ </head>
+  <body>
     <h1>Odion Irenen Portfolio</h1>
     <h2>I'm a Web Developer and this is my <a href="./index.html.html">Personal Shopping Site</a></h2>
     <hr>
-    <h2><a href="./public/birthday.html">Birthday Invite Project</a></h2><br>
+    <h2><a href="./birthday.html">Birthday Invite Project</a></h2><br>
     <img src="./assets/images/bi.png" alt="">
     <hr>
     <a href="./public/contact.html">Contact Me</a>
     <a href="./public/about.html">About Me</a>
-</body>
+  </body>
 </html>
-
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
 <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
